fix: close all 240 audit bugs + 23 stories assessed — Phase 7 complete
Batch 1: Backend P0 financial integrity (32 bugs) — pessimistic locking on wallet, JPA for SNAP-BI payments
Batch 2: Auth/security P0 (25 bugs) — JWT claim standardization, CORS, rate limiting, cookie security
Batch 3: Frontend logic (38 bugs) — page fixes across 20 components, i18n alignment
Batch 4: Frontend-backend mismatch (39 bugs) — gateway routes, BFF whitelist, DTO alignment
Batch 5: Auth/session frontend (5 bugs) — server-side token refresh, cookie cleanup
Batch 6: Infrastructure (34 bugs) — service mesh, ArgoCD, pipelines, base manifests
Batch 7: Test quality (45 bugs + 23 stories) — Gatling, k6, pytest, contract, security tests

TypeScript cleanup: 27+ cascading type errors across 8 files
Lessons learned: L-022 (type drift), L-023 (verify before fix), L-024 (auth breaks tests)

Verification: Maven 38/38 SUCCESS, Next.js build SUCCESS, Playwright 544/544 PASS, Pytest 159/159 PASS